--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
    <!--footer-->
    <footer class="footer-container">
       <div class="footer">
-         <a href="https://unsplash.com/" target="_blank">Image taken from UNSPLASH</a>
+         <a href="https://unsplash.com/" target="_blank">Images taken from UNSPLASH</a>
          <h3>Copyright &copy; to MANORANJAN PANIGRAHI</h3>
       </div>
    </footer>
