--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="styles.css">
-   <title>My Social's</title>
+   <title>B&W Wildlife Image Gallery</title>
 </head>
 <body>
    <!--header-->
@@ -12,7 +12,7 @@
       <div><a href="/index.html">Home</a></div>
       <div><a href="/contact.html">Contact Me</a></div>
    </header>
-   <h1>B&W Wildlife Image Gallery</h1>
+   <h1>My Social Handles</h1>
    <!--main content-->
    <div class="socials">
       <a href="https://www.instagram.com/manoranjan_panigrahi/?hl=en" target="_blank" class="insta">Instagram</a>
